google API - refactoring

--- a/search-engine-comparison-app/src/main/resources/application.properties
+++ b/search-engine-comparison-app/src/main/resources/application.properties
@@ -1,2 +1,7 @@
+## User Information
 api.google.key=AIzaSyBvZTE5aKlUXbCLz2Wy0GayLZEY4B42-X4
-api.google.url=https://www.googleapis.com/customsearch/v1?key=AIzaSyBvZTE5aKlUXbCLz2Wy0GayLZEY4B42-X4&cx=017576662512468239146:omuauf_lfve&q=lectures&exactTerms=
+
+## API Information
+api.google.path=https://www.googleapis.com/customsearch/v1
+api.google.cx=017576662512468239146:omuauf_lfve
+api.google.q=lectures
