--- a/search-engine-comparison-app/src/main/resources/application.properties
+++ b/search-engine-comparison-app/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 ## User Information
 api.google.key=AIzaSyBvZTE5aKlUXbCLz2Wy0GayLZEY4B42-X4
+api.microsoft.key=b76a1ac8c2624fdb9435a81e87f22ae8 ##daf0f9ffa6a54d87a60688fe88bd9c22
 
 ## API Information
 api.google.path=https://www.googleapis.com/customsearch/v1
