--- a/search-engine-comparison-app/src/main/resources/application.properties
+++ b/search-engine-comparison-app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## User Information
 api.google.key=AIzaSyBvZTE5aKlUXbCLz2Wy0GayLZEY4B42-X4
-api.bing.key=b76a1ac8c2624fdb9435a81e87f22ae8
-#api.bing.key=daf0f9ffa6a54d87a60688fe88bd9c22
+api.bing.key=63859d4c23de43438178ce3942cc85e8
+#api.bing.key=14a51b40038c4a168516bdf98931c11a
 api.yandex.key=03.1031818419:3321e9ba03126a4eb4da3a94c4b497a1
 
 ## Google API Information
@@ -10,8 +10,8 @@ api.google.cx=017576662512468239146:omuauf_lfve
 api.google.q=lectures
 
 ## Bing API Information
-api.bing.host=https://api.cognitive.microsoft.com
-api.bing.path=/bing/v7.0/search
+api.bing.host=https://api.bing.microsoft.com
+api.bing.path=/v7.0/search
 
 ## Yandex API Information
 api.yandex.host=https://yandex.com/search/xml
