--- a/search-engine-comparison-app/pom.xml
+++ b/search-engine-comparison-app/pom.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.cignium.searchengine</groupId>
+	<groupId>com.tekton.searchengine</groupId>
 	<artifactId>search-engine-comparison-app</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
@@ -47,7 +47,7 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>com.cignium.searchengine.App</mainClass>
+							<mainClass>com.tekton.searchengine.App</mainClass>
 						</manifest>
 					</archive>
 					<descriptorRefs>
